[MediaCCC] Migrate stream extractors to new Stream API
Also add support for subtitles in videos.